@@ -104,6 +104,191 @@ soup_uri_get_default_port (SoupProtocol proto)
 	return -1;
 }
 
+/*
+ * Ripped off from libxml
+ */
+static void
+normalize_path (gchar *path)
+{
+	char *cur, *out;
+
+	/* 
+	 * Skip all initial "/" chars.  We want to get to the beginning of the
+	 * first non-empty segment.
+	 */
+	cur = path;
+	while (cur[0] == '/')
+		++cur;
+	if (cur[0] == '\0')
+		return;
+
+	/* Keep everything we've seen so far.  */
+	out = cur;
+
+	/*
+	 * Analyze each segment in sequence for cases (c) and (d).
+	 */
+	while (cur[0] != '\0') {
+		/*
+		 * c) All occurrences of "./", where "." is a complete path
+		 * segment, are removed from the buffer string.  
+		 */
+		if ((cur[0] == '.') && (cur[1] == '/')) {
+			cur += 2;
+			/* 
+			 * '//' normalization should be done at this point too
+			 */
+			while (cur[0] == '/')
+				cur++;
+			continue;
+		}
+
+		/*
+		 * d) If the buffer string ends with "." as a complete path
+		 * segment, that "." is removed.  
+		 */
+		if ((cur[0] == '.') && (cur[1] == '\0'))
+			break;
+
+		/* Otherwise keep the segment.  */
+		while (cur[0] != '/') {
+			if (cur[0] == '\0')
+				goto done_cd;
+			(out++)[0] = (cur++)[0];
+		}
+		/* nomalize '//' */
+		while ((cur[0] == '/') && (cur[1] == '/'))
+			cur++;
+		
+		(out++)[0] = (cur++)[0];
+	}
+ done_cd:
+	out[0] = '\0';
+
+	/* Reset to the beginning of the first segment for the next sequence. */
+	cur = path;
+	while (cur[0] == '/')
+		++cur;
+	if (cur[0] == '\0')
+		return;
+
+	/*
+	 * Analyze each segment in sequence for cases (e) and (f).
+	 *
+	 * e) All occurrences of "<segment>/../", where <segment> is a
+	 *    complete path segment not equal to "..", are removed from the
+	 *    buffer string.  Removal of these path segments is performed
+	 *    iteratively, removing the leftmost matching pattern on each
+	 *    iteration, until no matching pattern remains.
+	 *
+	 * f) If the buffer string ends with "<segment>/..", where <segment>
+	 *    is a complete path segment not equal to "..", that
+	 *    "<segment>/.." is removed.
+	 *
+	 * To satisfy the "iterative" clause in (e), we need to collapse the
+	 * string every time we find something that needs to be removed.  Thus,
+	 * we don't need to keep two pointers into the string: we only need a
+	 * "current position" pointer.
+	 */
+	while (1) {
+		char *segp;
+
+		/* 
+		 * At the beginning of each iteration of this loop, "cur" points
+		 * to the first character of the segment we want to examine.  
+		 */
+
+		/* Find the end of the current segment.  */
+		segp = cur;
+		while ((segp[0] != '/') && (segp[0] != '\0'))
+			++segp;
+
+		/* 
+		 * If this is the last segment, we're done (we need at least two
+		 * segments to meet the criteria for the (e) and (f) cases).
+		 */
+		if (segp[0] == '\0')
+			break;
+
+		/* 
+		 * If the first segment is "..", or if the next segment _isn't_
+		 * "..", keep this segment and try the next one.  
+		 */
+		++segp;
+		if (((cur[0] == '.') && (cur[1] == '.') && (segp == cur+3))
+		    || ((segp[0] != '.') || (segp[1] != '.')
+			|| ((segp[2] != '/') && (segp[2] != '\0')))) {
+			cur = segp;
+			continue;
+		}
+
+		/* 
+		 * If we get here, remove this segment and the next one and back
+		 * up to the previous segment (if there is one), to implement
+		 * the "iteratively" clause.  It's pretty much impossible to
+		 * back up while maintaining two pointers into the buffer, so
+		 * just compact the whole buffer now.  
+		 */
+
+		/* If this is the end of the buffer, we're done.  */
+		if (segp[2] == '\0') {
+			cur[0] = '\0';
+			break;
+		}
+		strcpy(cur, segp + 3);
+
+		/* 
+		 * If there are no previous segments, then keep going from
+		 * here. 
+		 */
+		segp = cur;
+		while ((segp > path) && ((--segp)[0] == '/'))
+			;
+		if (segp == path)
+			continue;
+
+		/* 
+		 * "segp" is pointing to the end of a previous segment; find
+		 * it's start.  We need to back up to the previous segment and
+		 * start over with that to handle things like "foo/bar/../..".
+		 * If we don't do this, then on the first pass we'll remove the
+		 * "bar/..", but be pointing at the second ".." so we won't
+		 * realize we can also remove the "foo/..".  
+		 */
+		cur = segp;
+		while ((cur > path) && (cur[-1] != '/'))
+			--cur;
+	}
+	out[0] = '\0';
+
+	/*
+	 * g) If the resulting buffer string still begins with one or more
+	 *    complete path segments of "..", then the reference is
+	 *    considered to be in error. Implementations may handle this
+	 *    error by retaining these components in the resolved path (i.e.,
+	 *    treating them as part of the final URI), by removing them from
+	 *    the resolved path (i.e., discarding relative levels above the
+	 *    root), or by avoiding traversal of the reference.
+	 *
+	 * We discard them from the final path.
+	 */
+	if (path[0] == '/') {
+		cur = path;
+		while ((cur[1] == '.') && (cur[2] == '.')
+		       && ((cur[3] == '/') || (cur[3] == '\0')))
+			cur += 3;
+
+		if (cur != path) {
+			out = path;
+			while (cur[0] != '\0')
+				(out++)[0] = (cur++)[0];
+			out[0] = 0;
+		}
+	}
+
+	return;
+}
+
 /**
  * soup_uri_new: create a SoupUri object from a string
  * @uri_string: The string containing the URL to scan
@@ -212,6 +397,9 @@ soup_uri_new (const gchar* uri_string)
 		g_uri->path = path;
 		g_uri->querystring = NULL;
 	}
+
+	if (g_uri->path)
+		normalize_path (g_uri->path);
 
 	return g_uri;
 }
